--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.7.2",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "babel-template": "^6.7.0"
   }
 }
