--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.7.2",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "power-assert": "^1.3.1"
   },
   "dependencies": {
     "babel-template": "^6.7.0"
